--- a/wp-content/themes/whospeaksforme/assets/sass/04-elements/acf.scss
+++ b/wp-content/themes/whospeaksforme/assets/sass/04-elements/acf.scss
@@ -308,6 +308,9 @@ section.acf-free_form_content{
 			flex-direction: row;
 			figure,p{
 				position: absolute;
+				@include media(desktop-only){
+					position: relative;
+				}
 				top: 50px;
 				transition: transform 0.5s ease;
 				img{
